# heads-i-win-tails-you-lose-cpp-template

./: CMakeLists.txt  main.cpp
src/: coinflip.cpp  coinflip.hpp
tests/: coinflip_test.cpp
